<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feeding"
            android:icon="@drawable/ic_baseline_local_dining_24"
            android:title="@string/menu_feeding" />
        <item
            android:id="@+id/nav_wear"
            android:icon="@drawable/ic_baseline_accessibility_24"
            android:title="@string/menu_wear" />
        <item
            android:id="@+id/nav_leisure"
            android:icon="@drawable/ic_baseline_beach_access_24"
            android:title="@string/menu_leisure" />
        <item
            android:id="@+id/nav_travels"
            android:icon="@drawable/ic_baseline_airport_shuttle_24"
            android:title="@string/menu_travels" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>
</menu>